--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+body{
+    height: 100%;
+    width: 100%;
+    border: 2px solid blue;
+}
 main{
     width: 100%;
     height: 100%;
-    background-color: black;
-    color: black;
+   border: 3px solid red;
+    
 }
 
 div{
+    height: 50%;
+    width: 50%;
     border: 2px solid black;
 }
