--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 body{
-    height: 100%;
-    width: 100%;
-    border: 2px solid blue;
+    height: 800px;
+    width: 1000px;
+    border:3px solid blue;
+    position: relative;
 }
 main{
     width: 100%;
     height: 100%;
-   border: 3px solid red;
-    
+   border: 2px solid red;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   text-align: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
 }
 
 div{
-    height: 50%;
-    width: 50%;
+    height: 150px;
+    width: 150px;
     border: 2px solid black;
+
 }
