--- a/style.css
+++ b/style.css
@@ -5,17 +5,18 @@ body{
     position: relative;
 }
 main{
-    width: 100%;
-    height: 100%;
+   height: 100%;
+   width: 100%; 
    border: 2px solid red;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
+   display: grid;
+   grid-template-columns: auto auto;
+   justify-content:space-evenly;
+   align-content: center;
 }
 
 div{
