--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main{
    transform: translate(-50%, -50%);
    text-align: center;
    display: grid;
-   grid-template-columns: auto auto;
+   grid-template-columns: auto auto auto;
    justify-content:space-evenly;
    align-content: center;
 }
@@ -23,5 +23,6 @@ div{
     height: 150px;
     width: 150px;
     border: 2px solid black;
+    
 
 }
