--- a/style.css
+++ b/style.css
@@ -8,21 +8,15 @@ main{
    height: 100%;
    width: 100%; 
    border: 2px solid red;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   text-align: center;
-   display: grid;
-   grid-template-columns: auto auto auto;
-   justify-content:space-evenly;
-   align-content: center;
-}
+   }
 
 div{
     height: 5em;
-    width: 5em;
+    width: 20em;
     border: 2px solid black;
-    
-
+    position: relative;
+    top:10%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
