--- a/style.css
+++ b/style.css
@@ -1,78 +1,75 @@
-body{
-    height: 57em;
-    width: 100%;
-    border:3px solid blue;
-    margin: auto;
-    font-family: -apple-system, blinkMacSystemFont, sans-serif;
-    overflow: auto;
-    background: linear-gradient(
-     315deg,
-     rgba(62, 40, 93, 0.474) 3%,
-     rgba(33, 92, 152, 0.455) 38%,
-     rgba(94, 45, 2, 0.495) 68%,
-     rgba(144, 17, 17, 0.54) 98%
-    );
-    animation: gradient 15s ease infinite;
-    background-size: 300% 300%;
-    background-attachment: fixed;
-    @media (max-width: 325){
-        
-    }
- }
+body {
+  height: 57em;
+  width: 100%;
+  border: 3px solid blue;
+  margin: auto;
+  font-family: -apple-system, blinkMacSystemFont, sans-serif;
+  overflow: auto;
+  background: linear-gradient(
+    315deg,
+    rgba(62, 40, 93, 0.474) 3%,
+    rgba(33, 92, 152, 0.455) 38%,
+    rgba(94, 45, 2, 0.495) 68%,
+    rgba(144, 17, 17, 0.54) 98%
+  );
+  animation: gradient 15s ease infinite;
+  background-size: 300% 300%;
+  background-attachment: fixed;
+  @media (max-width: 325) {
+  }
+}
 
- 
- @keyframes gradient{
-     0%{
-         background-position: 0% 0%;
-     }
-     50%{
-         background-position: 100% 100%;
-     }
-     100%{
-         background-position: 0% 0%;
-     }
- }
- .wave{
-     background:rgb(255 255 255/25%);
-     border-radius: 1000% 1000% 0 0;
-     position: fixed;
-     width: 200%;
-     height: 12em;
-     animation: wave 10s -3s linear infinite;
-     transform: translate3d(0, 0, 0);
-     opacity: 0.8;
-     bottom: 0;
-     left: 0;
-     z-index: -1;
- }
- .wave:nth-of-type(2){
-     bottom: -1.25em;
-     animation: wave 18s linear reverse infinite;
-     opacity: 0.8;
- }
- .wave:nth-of-type(3){
-     bottom: -2.5em;
-     animation: wave 20s -1s reverse infinite;
-     opacity: 0.9;
- 
- }
- @keyframes wave{
-     2%{
-         transform: translateX(1);
-     }
-     25%{
-         transform: translateX(-25%);
-     }
-     50%{
-         transform: translateX(-50%);
-     }
-     75%{
-         transform: translateX(-25%);
-     }
-     100%{
-         transform: translateX(1);
-     }
- }
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+.wave {
+  background: rgb(255 255 255/25%);
+  border-radius: 1000% 1000% 0 0;
+  position: fixed;
+  width: 200%;
+  height: 12em;
+  animation: wave 10s -3s linear infinite;
+  transform: translate3d(0, 0, 0);
+  opacity: 0.8;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+.wave:nth-of-type(2) {
+  bottom: -1.25em;
+  animation: wave 18s linear reverse infinite;
+  opacity: 0.8;
+}
+.wave:nth-of-type(3) {
+  bottom: -2.5em;
+  animation: wave 20s -1s reverse infinite;
+  opacity: 0.9;
+}
+@keyframes wave {
+  2% {
+    transform: translateX(1);
+  }
+  25% {
+    transform: translateX(-25%);
+  }
+  50% {
+    transform: translateX(-50%);
+  }
+  75% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(1);
+  }
+}
 /*body{
     height: 58em;
     width: 100%;
@@ -80,112 +77,116 @@ body{
     position: relative;
 }*/
 
-main{
-   height: 100%;
-   width: 100%; 
-   border: 2px solid red;
-    display: grid;
-    grid-template-columns: auto;
-    justify-content: center;
-    vertical-align: center;
-   }
-#form{
-    position: absolute;
-    left: 50%;
-    top:20%;
-    transform: translate(-50%, -50%);
-
+main {
+  height: 100%;
+  width: 100%;
+  border: 2px solid red;
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: center;
+  vertical-align: center;
 }
-h2{
-    font-style: italic;
-    color: white
+#form {
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%, -50%);
 }
-
-
-#title{
-    background: rgba(1, 13, 123, 0.371);
-    border: 1px solid black
-}
-#insub{
-    display: grid;
-    grid-template-columns: 60% 40%;
-    vertical-align: middle;
-    text-align: center;
-    justify-content: center;
-    background: rgba(7, 31, 44, 0.123);
-}
-div input{  
-    text-align: center;
-    background-color: rgba(7, 31, 44, 0.123);
-    border-radius: 15px;   
-    border: 1px transparent rgba(7, 31, 44, 0.123);
-    color:rgb(255, 255, 255);
-    font-size: 20px;
-}
-::placeholder{
-    color: beige;
-}
-#newTask{
-    border-radius:  12px;
-    height: 80%;
-    width: 80%;
-    vertical-align: middle;
-    margin: auto auto auto auto;
-    
-}
-#newTask:hover{
-    background-color: black;
-    color: white;
-    cursor: pointer;
-
+h2 {
+  font-style: italic;
+  color: white;
 }
 
+#title {
+  background: rgba(1, 13, 123, 0.371);
+  border: 1px solid black;
+}
+#insub {
+  display: grid;
+  grid-template-columns: 60% 40%;
+  vertical-align: middle;
+  text-align: center;
+  justify-content: center;
+  background: rgba(7, 31, 44, 0.123);
+}
+div input {
+  text-align: center;
+  background-color: rgba(7, 31, 44, 0.123);
+  border-radius: 15px;
+  border: 1px transparent rgba(7, 31, 44, 0.123);
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+}
+::placeholder {
+  color: beige;
+}
+#newTask {
+  border-radius: 12px;
+  height: 80%;
+  width: 80%;
+  vertical-align: middle;
+  margin: auto auto auto auto;
+}
+#newTask:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
 
-div{
-    height: 5em;
-    width: 45em;
-   /* border: 1px solid black;
+div {
+  height: 5em;
+  width: 45em;
+  /* border: 1px solid black;
     /*position: relative;
     top:10%;
     left:50%;
     transform: translate(-50%, -50%);*/
-    text-align: center;
-    border-radius: 15px;
+  text-align: center;
+  border-radius: 15px;
 }
-#tasks{
-    min-height: 5em;
-    border: none;
-    
-    
+#tasks {
+  min-height: 5em;
+  border: none;
 }
-.tarea{
-    display: grid;
-    grid-template-columns: 80% 20%;
-    overflow-wrap: normal;
-    height: max-content;
-    /*background-color: blue;*/
-
-
+.tarea {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  overflow-wrap: normal;
+  height: max-content;
+  /*background-color: blue;*/
 }
 .tarea:nth-child(even) {
-    background: rgba(7, 31, 44, 0.123);
-  }
-  .tarea:nth-child(odd) {
-    background: rgba(1, 13, 123, 0.371);
-  }
-
-#internalButton{
-    border-radius: 12px;
-    height: 4em;
-    width: 80%;
-    margin:auto auto auto auto;
-    cursor: pointer;
-    vertical-align: middle;
+  background: rgba(7, 31, 44, 0.123);
 }
-#internalButton:hover{
-    background-color: black;
-    color: white;
-
+.tarea:nth-child(odd) {
+  background: rgba(1, 13, 123, 0.371);
 }
 
-
+#internalButton {
+  border-radius: 12px;
+  height: 4em;
+  width: 80%;
+  margin: auto auto auto auto;
+  cursor: pointer;
+  vertical-align: middle;
+}
+#internalButton:hover {
+  background-color: black;
+  color: white;
+}
+.container{
+    position:relative;
+}
+#eliminarTodas {
+  position: relative;
+  top:90%; 
+  left:50%;
+  transform: translate(-50%); 
+  width: 100%;
+  display: block;
+  justify-content: start;
+  cursor: pointer;
+  border-radius: 15px;
+  opacity: 70%;
+  align-self:flex-end;
+}
