--- a/style.css
+++ b/style.css
@@ -70,16 +70,12 @@ body {
     transform: translateX(1);
   }
 }
-/*body{
-    height: 58em;
-    width: 100%;
-    border:3px solid blue;
-    position: relative;
-}*/
+
 
 main {
   height: 100%;
   width: 100%;
+  max-height: 200%;
   border: 2px solid red;
   display: grid;
   grid-template-columns: auto;
@@ -136,25 +132,42 @@ div input {
 div {
   height: 5em;
   width: 45em;
-  /* border: 1px solid black;
-    /*position: relative;
-    top:10%;
-    left:50%;
-    transform: translate(-50%, -50%);*/
   text-align: center;
   border-radius: 15px;
 }
 #tasks {
-  min-height: 5em;
+  min-height: max-content;  
+  display: flex;
+  flex-direction: column;
   border: none;
 }
 .tarea {
-  display: grid;
+  display:grid;
   grid-template-columns: 80% 20%;
-  overflow-wrap: normal;
-  height: max-content;
-  /*background-color: blue;*/
+  min-height: 5em;
+  
 }
+::-webkit-scrollbar {
+    width:10px;    
+  }
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+    opacity: 0;
+    
+    
+  }
+  ::-webkit-scrollbar-thumb {
+    color: transparent;
+    background: rgba(1, 13, 123, 0.371);
+  
+    height: 10px;
+    width: 10px;
+  
+
+  }
+
+
 .tarea:nth-child(even) {
   background: rgba(7, 31, 44, 0.123);
 }
@@ -163,30 +176,49 @@ div {
 }
 
 #internalButton {
+  position: relative;
+  top:50%;
+  left:90%;
+  transform: translate(-90%,-50%);
   border-radius: 12px;
   height: 4em;
   width: 80%;
-  margin: auto auto auto auto;
   cursor: pointer;
-  vertical-align: middle;
+  
 }
 #internalButton:hover {
   background-color: black;
   color: white;
 }
 .container{
-    position:relative;
+    height:600%;
+    max-height: 700%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1px solid black;
+    justify-content: flex-start;
+    align-content: flex-start;
+    overflow-y:visible;
+    overflow-x: hidden;
+   
 }
-#eliminarTodas {
-  position: relative;
-  top:90%; 
-  left:50%;
-  transform: translate(-50%); 
-  width: 100%;
-  display: block;
-  justify-content: start;
+.firsItem{
+    max-height: 70%;
+    height: 5em;
+    border: 1px solid black;
+}
+
+#eliminarTodas { 
+  position: fixed;
+  top:85%;
+  left: 50%;
+  transform: translate(-50%, 4%);
+  width: 55em;
+  height: 6em;
   cursor: pointer;
   border-radius: 15px;
-  opacity: 70%;
-  align-self:flex-end;
+  opacity: 65%;
+  background-color: red;
 }
