--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ div {
   display:grid;
   grid-template-columns: 80% 20%;
   min-height: 5em;
+  width: 98%
   
 }
 ::-webkit-scrollbar {
@@ -160,7 +161,7 @@ div {
   ::-webkit-scrollbar-thumb {
     color: transparent;
     background: rgba(1, 13, 123, 0.371);
-  
+
     height: 10px;
     width: 10px;
   
@@ -197,11 +198,12 @@ div {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    border: 1px solid black;
+    
     justify-content: flex-start;
     align-content: flex-start;
-    overflow-y:visible;
+    overflow-y:scroll;
     overflow-x: hidden;
+    border-radius: 0;
    
 }
 .firsItem{
