--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   height: 56em;
   width: 100%;
-  border: 3px solid blue;
   margin: auto;
   font-family: -apple-system, blinkMacSystemFont, sans-serif;
   overflow: auto;
@@ -20,7 +19,7 @@ body {
   }
 }
 
-/*@keyframes gradient {*
+@keyframes gradient {
   0% {
     background-position: 0% 0%;
   }
@@ -31,7 +30,7 @@ body {
     background-position: 0% 0%;
   }
 }
-/*.wave {
+.wave {
   background: rgb(255 255 255/25%);
   border-radius: 1000% 1000% 0 0;
   position: fixed;
@@ -77,7 +76,6 @@ main {
   height: 100%;
   width: 100%;
   max-height: 200%;
-  border: 2px solid red;
   display: grid;
   grid-template-columns: auto;
   justify-content: center;
