--- a/style.css
+++ b/style.css
@@ -5,19 +5,29 @@ body {
   font-family: -apple-system, blinkMacSystemFont, sans-serif;
   overflow: auto;
   overflow-x: hidden;
-  background: linear-gradient(
-    315deg,
-    rgba(62, 40, 93, 0.474) 3%,
-    rgba(33, 92, 152, 0.455) 38%,
-    rgba(94, 45, 2, 0.495) 68%,
-    rgba(144, 17, 17, 0.54) 98%
-  );
-  animation: gradient 15s ease infinite;
-  background-size: 300% 300%;
-  background-attachment: fixed;
-  @media (max-width: 325) {
+  /*background-attachment: fixed;*/
+  background: linear-gradient(356deg, #1519e8, #9f1d08, #f6c103, #1519e8 );
+  background-size: 500% 500%;
+
+  -webkit-animation: changeColor 16s ease infinite;
+  animation: changeColor 16s ease infinite;
+  @media (max-width: 600px) {
+    width:600px;
+    height: 600px;
   }
 }
+
+@-webkit-keyframes changeColor {
+  0%{background-position:46% 0%}
+  50%{background-position:55% 100%}
+  100%{background-position:46% 0%}
+}
+@keyframes changeColor {
+  0%{background-position:46% 0%}
+  50%{background-position:55% 100%}
+  100%{background-position:46% 0%}
+}
+
 
 @keyframes gradient {
   0% {
@@ -30,7 +40,7 @@ body {
     background-position: 0% 0%;
   }
 }
-.wave {
+/*.wave {
   background: rgb(255 255 255/25%);
   border-radius: 1000% 1000% 0 0;
   position: fixed;
@@ -115,7 +125,7 @@ h2 {
 }
 @keyframes drop {
   0% {top:-250%; color: black};
-  100%{background: -webkit-linear-gradient(360deg, black 25%, red 75%, white);
+  100%{background: linear-gradient(360deg, black 25%, red 75%, white);
     
    }
   /*25%{ top:-150%;background: linear-gradient(90deg, red 75%, black 25%)}
