--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 }
 
- @media (max-width:730px) {
+ @media (max-width:767px) {
   #title, #firsItem, #insub, #tasks{  
     width: 80%;
     position: relative;
@@ -44,11 +44,11 @@ body {
     left: 50%;
     transform: translate(-50%, -20%);
     }
-    #eliminarTodas{
+    /* #eliminarTodas{
       width:300px;
           
 
-    }
+    } */
  }
 
 @-webkit-keyframes changeColor {
@@ -248,8 +248,7 @@ div {
     box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
     opacity: 0;
-    
-    
+        
   }
   ::-webkit-scrollbar-thumb {
     color: transparent;
@@ -286,20 +285,18 @@ div {
   background-color: black;
   color: white;
 }
-/* .container{
+.containerx{
+  position: relative;
+    top: -70%;
+    width:auto;
     height:600%;
-    max-height: 700%;
-    position: relative;
-    display: flex;
+    max-height: 600%;
     flex-direction: column;
-    align-items: flex-start;
-    
-    justify-content: flex-start;
-    align-content: flex-start;
-    overflow-y:scroll;
+    /* align-items: flex-start; */
+    /* justify-content: flex-start; */
+    /* align-content: flex-start; */
     overflow-x: hidden;
-    border-radius: 0; */ 
-
+   }
 .firsItem{
     max-height: 70%;
     height: 5em;
@@ -309,14 +306,14 @@ div {
 
 #eliminarTodas { 
   position: relative;
-  top:90%;
+  top:-62%;
   left: 0;
-  transform: translate(0, 200%);
+  /* transform: translate(0, );
   border: 1px solid black;
-  width: 100%;
-  height: 6em;
+  width: 100%; 
+  height: 6em;*/
   cursor: pointer;
   border-radius: 15px;
-  opacity: 65%;
+  opacity: 65%; 
   background-color: red;
 }
