--- a/style.css
+++ b/style.css
@@ -4,18 +4,21 @@ body {
   margin: auto;
   font-family: -apple-system, blinkMacSystemFont, sans-serif;
   overflow: auto;
-  overflow-x: hidden;
+  background: linear-gradient(
+   315deg,
+   rgba(101, 0, 94, 1) 3%,
+   rgba(60, 132, 206,1) 38%,
+   rgba(48, 238, 226, 1) 68%,
+   rgba(255, 25, 25, 1) 98%
+  );
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
   background-attachment: fixed;
-  background: linear-gradient(90deg, #1519e8, #0d7fb0, lightblue );
-  background-size: 500% 500%;
-
-  -webkit-animation: changeColor s ;
-  animation: changeColor 15s infinite;
 
 }
 
- @media (max-width:767px) {
-  #title, #firsItem, #insub, #tasks{  
+@media (max-width:767px) {
+  #title, #firsItem, #insub, #tasks {  
     width: 80%;
     position: relative;
     top:20%;
@@ -26,16 +29,17 @@ body {
     text-align: center;
     align-content: center;
     }
-  /* #eliminarTodas{
-    width: 100%;
+  #eliminarTodas{
+    width: 600px;
     position:relative;
     top:80%;
     left: 50%;
-    transform:  translate(-70%, -80%);
-  }   */
+    transform: translate(-9%);
+    
+  }   
 
  }
- @media (max-width:600px) {
+  @media (max-width:600px) { 
  #title, #firsItem, #insub, #tasks{  
     width: 300px;
     height: 100%;
@@ -44,13 +48,26 @@ body {
     left: 50%;
     transform: translate(-50%, -20%);
     }
-    /* #eliminarTodas{
-      width:300px;
-          
-
-    } */
- }
-
+    #eliminarTodas{
+      width: 300px;
+      position:relative;
+      top:80%;
+      left: 50%;
+      transform: translate(31%);
+      
+    }
+ } 
+ @media (max-width:575px) {
+  #eliminarTodas{
+    width: 300px;
+    position:relative;
+    top:80%;
+    left: 50%;
+    transform: translate(70%);
+    
+  }
+  }
+ 
 @-webkit-keyframes changeColor {
   0%{background-position:100% 8%}
   50%{background-position:55% 55%}
@@ -74,7 +91,7 @@ body {
     background-position: 0% 0%;
   }
 }
-/*.wave {
+.wave {
   background: rgb(255 255 255/25%);
   border-radius: 1000% 1000% 0 0;
   position: fixed;
@@ -113,7 +130,7 @@ body {
   100% {
     transform: translateX(1);
   }
-}*/
+}
 
 
 main {
