--- a/style.css
+++ b/style.css
@@ -305,6 +305,7 @@ div {
 .containerx{
   position: relative;
     top: -70%;
+    left:-1%;
     width:auto;
     height:600%;
     max-height: 600%;
