--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
   height: 46em;
   width: 100%;
@@ -14,7 +15,7 @@ body {
   animation: gradient 15s ease infinite;
   background-size: 400% 400%;
   background-attachment: fixed;
-
+  overflow-x: hidden;
 }
 
 @media (max-width:767px) {
