--- a/style.css
+++ b/style.css
@@ -282,11 +282,8 @@ div {
   ::-webkit-scrollbar-thumb {
     color: transparent;
     background: rgba(1, 13, 123, 0.371);
-
     height: 10px;
     width: 10px;
-  
-
   }
 
 
@@ -314,28 +311,28 @@ div {
   background-color: black;
   color: white;
 }
-.containerx{
+.containerx {
   position: relative;
     top: -70%;
     left:-1%;
-    height:600%;
-    max-height: 600%;
+    height:600% !important;
+    max-height: 600% !important;
     flex-direction: column;
     /* align-items: flex-start; */
     /* justify-content: flex-start; */
     /* align-content: flex-start; */
     overflow-x: hidden;
+    overflow-y:scroll;
    }
 .firsItem{
     max-height: 70%;
     height: 5em;
     border: 1px solid black;
-    
-}
+  }
 
 #eliminarTodas { 
   position: relative;
-  top:-62%;
+  top:500%;
   left: 0;
   /* transform: translate(0, );
   border: 1px solid black;
