--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ div {
   border-radius: 15px;
 }
 #tasks {
+  max-height: 600%;
   min-height: max-content;  
   display: flex;
   flex-direction: column;
@@ -313,10 +314,10 @@ div {
 }
 .containerx {
   position: relative;
-    top: -70%;
+    top: -0%;
     left:-1%;
-    height:600% !important;
-    max-height: 600% !important;
+    height:600%;
+    max-height: 600%;
     flex-direction: column;
     /* align-items: flex-start; */
     /* justify-content: flex-start; */
@@ -332,7 +333,7 @@ div {
 
 #eliminarTodas { 
   position: relative;
-  top:500%;
+  
   left: 0;
   /* transform: translate(0, );
   border: 1px solid black;
